v.1.8.8

new:
- made autocompletion list in form of "tag: ..."

fix:
- flushing with error removed tasks from being saved further
- 'Flush error' message is less annoyig, it will be shown only first time till flush complete totally ok.


v1.8.7

fix:
- switching project in window results in mixed database; that was nasty untested behavior ever, sorry to all who step into.
- sql made more stable; v1.8.6 sql issue removed

change:
- 'search' skips TEMP folder
- 'Update inconsistence' command renamed to 'Show inconsistence'

issues:
- switching project in window is not considered as bugless since there's no strict Sublime event applied at the time. Anyway, previous mixing database is fixed, and in worst case you should restart Sublime if TypeTodo will throw Flush error.


v1.8.6

fix:
- (workaround) Sql crash localized, issue to fix further


v1.8.5

new:
- resave doplets at filename change, basically for new unsaved files

fix:
- flush/fetch freeze removed (was accidentally brought in with v1.7.1)


v1.8.4

change:
- 'find' with tag should show results view for one match

fix:
- 'browse' command didnt work
- 'search' with blank field (in-view) failed
- reviewed loose code that potentially skips saving of canceled doplets. Issue will have more observation.


v1.8.3
Crashfix


v1.8.2

new:
- 'Update inconsistence' tool for in-view replacing outdated doplets with actual ones
- fetch and synchronize db periodically, not only at start and at .do change
- jump from search results by mouse doubleclick
- 'Search todo' allow exclusive search by prefixing search string with '-': only doplets that are NOT tagged as any of listed tags will match.

fix:
- autocompletion was wasted after doplet's tag


v1.8.1

change:
- 'file' base now holds only last Editor and Timestamp, without Creator and Creation stamp anymore: it is job for sql/http storage.
- save only doplets with actual changes; changing doplet and then undoing will not reset stamp in sql/http