@@ -1,11 +1,12 @@
 v.1.8.8
 
-new:
+change:
 - made autocompletion list in form of "tag: ..."
 
 fix:
-- flushing with error removed tasks from being saved further
+- flushing with error removed tasks from being saved further, no more issue, tasks will be surely resaved on errors.
 - 'Flush error' message is less annoyig, it will be shown only first time till flush complete totally ok.
+
 
 
 v1.8.7
